<resources>
    <string name="app_name">FirstTest</string>
    <string name="header">Cryptocurrencies</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="main_label">main_screen_label</string>
    <string name="settings_label">settings_screen_label</string>
    <string name="sort">Sort</string>
    <string name="by_price">By price</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="connection">No connection to the internet</string>
    <string name="try_again">Try Again</string>
    <string name="name">First Name</string>
    <string name="surname">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="download_photo">Download photo</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="day">24H</string>
    <string name="week">1W</string>
    <string name="month">1M</string>
    <string name="year">1Y</string>
    <string name="all">ALL</string>
    <string name="cap">Market cap</string>
    <string name="full_name">full_name</string>
    <string name="cost">cost</string>
    <string name="image">image</string>
</resources>