<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.01"
        android:lineHeight="24sp"
        android:text="@string/sort"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <ImageButton
        android:id="@+id/rb_price"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/radio_button_unchecked_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/rb_alphabetic"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/radio_button_unchecked_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_by_price"
        android:layout_width="80dp"
        android:layout_height="16dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="61dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.01"
        android:lineHeight="12sp"
        android:text="@string/by_price"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/tv_alphabetically"
        android:layout_width="80dp"
        android:layout_height="16dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.01"
        android:lineHeight="12sp"
        android:text="@string/alphabetically"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="56dp"
        android:layout_height="24dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="131dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.01"
        android:lineHeight="14sp"
        android:text="@string/cancel"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="56dp"
        android:layout_height="24dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="131dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.01"
        android:lineHeight="14sp"
        android:text="@string/ok"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>