<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <FrameLayout
        android:id="@+id/frame_cell"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_coin"
            android:transitionName="@string/image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="33dp"
            android:layout_height="21dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.02"
            android:lineHeight="21sp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:transitionName="@string/full_name"
            android:layout_marginStart="76dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.02"
            android:lineHeight="16sp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/tv_cost"
            android:layout_width="83dp"
            android:layout_height="21dp"
            android:transitionName="@string/cost"
            android:layout_marginStart="261dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.02"
            android:lineHeight="21sp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:targetApi="p" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>